--- a/css/questions.css
+++ b/css/questions.css
@@ -38,9 +38,6 @@
 .questionform{
     width:100%;
     background-color: white;
-    height:45vh;
-    
-    
     border-radius:10px;
     box-shadow:0px 0px 2px 0px gray;
 }
@@ -62,6 +59,7 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto;
+    clear: both;
 }
 #question{
     margin:20px;
@@ -69,7 +67,7 @@
     font-family:sans-serif;
 }
 #questionNumber{
-    margin-top:100px;
+    margin-top:10px;
     margin-bottom:10px;
 }
 
@@ -120,6 +118,8 @@
 #timer{
     float: right;
     padding:30px;
+    overflow: hidden;
+    display: block;
 }
 
 #correctanswers{
@@ -134,6 +134,7 @@
     padding:10px 0;
     padding-left:5px;
     background-color:rgb(16, 105, 16);
+    font-family: sans-serif;
 }
 .correctanswer{
     margin-top:5px;
@@ -143,7 +144,62 @@
     padding:10px 0;
     padding-left:5px;
     background-color:rgb(112, 194, 112);
+    font-family: sans-serif;
 }
 .qnumber{
     padding:10px;
+}
+
+.replay{
+    margin-bottom:50px;
+}
+
+    
+@media only screen and (max-width: 425px){
+	.middle{
+        width:90%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+        clear: both;
+    }
+    .next{
+        width: 95%;
+        padding:5px 30px;
+        margin-top:20px;
+        background-color: rgba(94, 181, 98, 1);
+        border: none;
+        border-radius:5px;
+        color: white;
+        cursor: pointer;
+
+    }
+    .top{
+        /* height:8vh; */
+        width:100%;
+        background-color: rgba(94, 181, 98, 1);
+        
+    }
+    .top img{
+        clear: both;
+    }
+    .top .left{
+        clear: both;
+        width:80%;
+    }
+    .top .right{
+        width:80%;
+        text-align: center;
+        clear: both;
+    }
+    .right h4{
+        margin: 40px;
+        padding:10px 50px;
+        border:1px solid white;
+        color: white;
+        background: transparent;
+        cursor: pointer;
+    }
 }
